# recommender

./: .gitignore  README.md  app.py  bedrock.py  gpt.py  pyproject.toml  rekognition.py  run.py
